    + Added:
      - dir-or-file-in-run
      - intra-source-package-circular-dependency
      - package-contains-broken-symlink
      - classpath-contains-relative-path
      - classpath-contains-files-not-in-usr-share
      - jar-not-in-usr-share
      - executable-jar-without-main-class
      - missing-dep-on-jarwrapper
      - missing-classpath
      - javalib-but-no-public-jars

  * checks/*.desc:
    + [NT] Updated the Needs-Info field to include the new
      collections where needed.
  * checks/binaries:
    + [NT] Accepted patch from Loïc Minier to support the armhf
      architecture.  (Closes: #618587)
  * checks/circular-deps{,.desc}:
    + [NT] Added to check for circular dependencies between
      binaries from the same source.  It requires all binaries
      packages to be present as well as the source package to be
      effective.  Thanks to Bill Allombert for the suggestion.
      (Closes: #316283)
  * checks/debhelper:
    + [NT] Use new alt-dh_commands data file to fetch alternative
      dependencies for dh_commands, which are sometimes provided
      indirectly by meta or API packages.
  * checks/fields:
    + [NT] Do not emit needless-dependency-on-jre for libX-gcj
      packages and only emit the tag at most once per package.
      Thanks to Rene Engelhard for the report.
      (Closes: #622396)
  * checks/files{,.desc}:
    + [NT] Added dir-or-file-in-run tag.
  * checks/java{,.desc}:
    + [NT] Added file from patches submitted by Vicent Fourmond.
  * checks/manpages:
    + [NT] Fixed false-positive binary-without-manpage when the
      manpage is in a direct dependency of the package and the
      package is checked together with its dependency.
      (Closes: #120323)
  * checks/scripts:
    + [NT] Fixed false positive missing-dep-for-interpreter, if
      the interpreter was dash, since dash is now essential.
      (Closes: #620120)
  * checks/symlinks{,.desc}:
    + [NT] New file that checks for broken symlinks.  A symlink