@@ -66,3 +66,15 @@ Certainty: possible
 Info: The name of the package suggests that it contains a java library but
  it does not contain any JAR file in /usr/share/java, while the java policy
  mandates that JAR files outside /usr/share/java are for private use.
+
+Tag: missing-manifest
+Severity: minor
+Certainty: possible
+Info: The jar file contains .class files but no manifest. This may
+ indicates a build misconfiguration.
+
+Tag: codeless-jar
+Severity: normal
+Certainty: certain
+Info: The jar file contains a manifest but no code. This probably indicates
+ that something went wrong at build-time.
